--- a/templates/Candidates/contraloria.html
+++ b/templates/Candidates/contraloria.html
@@ -23,18 +23,15 @@
 
   <div class="container-candidatos">
     <h4 class="fw-bold">VOTA CONTRALORÍA</h4>
-
     <div class="row mt-4 justify-content-center">
-     {% for candidate in candidates %}
-      <div class="row mt-4 justify-content-center">
-        <div class="col-md-4 candidato">
-          <img src="media/candidates/{{candidate.image}}" alt="{{candidate.user.username}}">
-          <h5 class="mt-3 fw-bold">{{candidate.user.name}}</h5>
-          <form action="{% url 'vote_candidate' candidate.id %}" method="POST">
-            {% csrf_token %}
-            <button type="submit" class="btn btn-votar">VOTAR</button>
-          </form>
-        </div>
+      {% for candidate in comptrollers %}
+      <div class="col-sm-6 col-md-4 col-lg-3 candidato">
+        <img src="{{ candidate.image.url }}" alt="{{candidate.user.username}}">
+        <h5 class="mt-3 fw-bold">{{candidate.user.username}}</h5>
+        <form action="{% url 'vote_candidate' candidate.id %}" method="POST">
+          {% csrf_token %}
+          <button type="submit" class="btn btn-votar">VOTAR</button>
+        </form>
       </div>
       {% endfor %}
     </div>
