--- a/templates/Candidates/personeria.html
+++ b/templates/Candidates/personeria.html
@@ -21,18 +21,20 @@
   </div>
   <div class="container-candidatos">
     <h4 class="fw-bold">VOTA PERSONERÍA</h4>
-    {% for candidate in candidates %}
+    
     <div class="row mt-4 justify-content-center">
-      <div class="col-md-4 candidato">
-        <img src="/media/candidates/{{candidate.image}}" alt="{{candidate.user.username}}">
-        <h5 class="mt-3 fw-bold">{{candidate.user.name}}</h5>
+      {% for candidate in ombudsman %}
+      <div class="col-sm-6 col-md-4 col-lg-3 candidato">
+        <img src="{{ candidate.image.url }}" alt="{{candidate.user.username}}">
+        <h5 class="mt-3 fw-bold">{{candidate.user.username}}</h5>
         <form action="{% url 'vote_candidate' candidate.id %}" method="POST">
           {% csrf_token %}
           <button type="submit" class="btn btn-votar">VOTAR</button>
         </form>
       </div>
+      {% endfor %}
     </div>
-    {% endfor %}
+    
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
